// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> with bgColor renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "#fff",
      "fill": "#fff",
    }
  }
>
  <span
    className="content"
  />
</span>
`;

exports[`<Badge /> with containerProps renders correctly 1`] = `
<span
  className="container testClassName"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#fff",
      "fill": "#fff",
      "margin": 10,
    }
  }
>
  <span
    className="content"
  />
</span>
`;

exports[`<Badge /> with link renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#fff",
      "fill": "#fff",
    }
  }
>
  <span
    className="content"
  >
    <a
      className="link"
      href="/test"
    />
  </span>
</span>
`;

exports[`<Badge /> with strokeColor renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#fff",
      "fill": "green",
    }
  }
>
  <span
    className="content"
  />
</span>
`;

exports[`<Badge /> with textColor renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "red",
      "fill": "#fff",
    }
  }
>
  <span
    className="content"
  />
</span>
`;

exports[`<Badge /> with timer 1`] = `
<Badge
  fields={
    Array [
      Object {
        "format": "d:h:m:s",
        "type": "timer",
        "value": "2021-01-08T09:00:00.000Z",
      },
    ]
  }
>
  <span
    className="container"
    style={
      Object {
        "backgroundColor": "#000",
        "color": "#fff",
        "fill": "#fff",
      }
    }
  >
    <span
      className="content"
    >
      <Component
        date="2021-01-08T09:00:00.000Z"
        key="0"
      >
        <time>
          <Timer
            date="2021-01-08T09:00:00.000Z"
          >
            7:00:00:00
          </Timer>
        </time>
      </Component>
    </span>
  </span>
</Badge>
`;

exports[`<Badge /> with title renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#fff",
      "fill": "#fff",
    }
  }
  title="Test"
>
  <span
    className="content"
  />
</span>
`;

exports[`<Badge /> without props renders correctly 1`] = `
<span
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#fff",
      "fill": "#fff",
    }
  }
>
  <span
    className="content"
  />
</span>
`;
